# Easy-Wav2Lip-MacOS

./: .gitattributes  .gitignore  README.md  config.ini  easy_functions.py  enhance.py  inference.py  install.py  last_detected_face.pkl  pyproject.toml
checkpoints/: Wav2Lip.pk1  Wav2Lip_GAN.pk1
