[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "easy-wav2lip-macos"
version = "0.1.0"
description = "Easy-Wav2Lip for MacOS"
readme = "README.md"
# 回归 3.10，确保 numpy 1.x 兼容性
requires-python = ">=3.10, <3.11"
authors = [
    { name = "anothermartz" },
]
dependencies = [
    # 使用本地修复版的 basicsr
    "basicsr @ {root:uri}/basicsr_fixed",
    "batch-face==1.4.0",
    "facexlib==0.3.0",
    "gdown==4.7.1",
    "gfpgan==1.3.8",
    "imageio-ffmpeg==0.4.9",
    "importlib-metadata==6.8.0",
    "ipython==8.16.1",
    "librosa==0.10.1",
    "moviepy==1.0.3",
    # 强制锁定 numpy 1.x
    "numpy<2.0.0",
    "opencv-python==4.8.1.78",
    "scipy>=1.11.3",
    "torch>=2.1.0",
    "torchaudio>=2.1.0",
    "torchvision>=0.16.0",
    "tqdm",
    "pillow",
    "requests",
]

[project.scripts]
wav2lip = "inference:main"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = [
    "/*.py",
    "/checkpoints/",
    "/models/",
    "/gfpgan/",
    "/config.ini",
    "/degradations.py",
    "/basicsr_fixed/"
]
exclude = [
    "/.venv/",
    "/temp/",
    "/results/",
    "/*.ipynb",
    "/.git/",
    "/.DS_Store",
    "/installed.txt",
    "/requirements*.txt",
    "/leijun_*",
    "/last_detected_face.pkl"
]

[tool.hatch.metadata]
allow-direct-references = true

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true
